# mpic

./: .gitignore  Cargo.toml  LICENSE  README.md  crates.js  help.html  mise.toml  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: rustdoc.yml
cli/: Cargo.toml
cli/src/: main.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/embedded_graphics_core/image/image_drawable/: trait.ImageDrawable.js
mpic/: all.html  constant.PREFERRED_FILE_EXT.html  enum.DecodeError.html  enum.EncodeError.html  index.html  sidebar-items.js  struct.Decoder.html  struct.Encoder.html  struct.FileHeader.html  struct.ImageInfo.html  struct.Version.html
mpic/color/: index.html  sidebar-items.js  struct.MpicRgb666.html  struct.MpicRgb888.html  struct.MpicYuv666.html
mpic/decode/: struct.Decoder.html
mpic/encode/: struct.Encoder.html
samples/: Mandrill.mpic
search.desc/mpic/: mpic-desc-0-.js
src/: chunk.rs  color.rs  decode.rs  encode.rs  lib.rs  test.rs
src/lz/: lazy.rs  lz.rs
src/mpic/: chunk.rs.html  color.rs.html  decode.rs.html  encode.rs.html  lib.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/embedded_graphics_core/geometry/: trait.OriginDimensions.js
trait.impl/embedded_graphics_core/image/: trait.ImageDrawable.js
viewer/: Cargo.toml
viewer/src/: main.rs
