[package]
edition = "2021"
name = "mpic"
version = "0.1.0"
authors = ["Nerry"]
description = "Simple Lossy Compression Image Format for Embedded Platforms"
readme = "README.md"
documentation = "https://neri.github.io/mpic/mpic/"
homepage = "https://github.com/neri/mpic"
repository = "https://github.com/neri/mpic"
license = "MIT"
categories = ["embedded", "no-std"]
keywords = ["graphics", "embedded", "embedded-graphics", "image"]
exclude = [
    "/.github/",
    ".gitignore",
    "/temp/",
    "/images/",
    "/samples/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
alloc = []
embedded = ["embedded-graphics"]
std = ["alloc"]

[dependencies]
embedded-graphics = { version = "0.8.1", optional = true }
heapless = { version = "0.8.0"}

[workspace]
members = [
    "viewer",
    "cli",
]
