[package]
edition = "2024"
name = "viewer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = { version = "0.8.1" }
embedded-graphics-simulator = { version = "0.7.0" }
mpic = {path = "..", features = ["alloc", "embedded"]}
